# matrixd

./: CMakeLists.txt  README.md
include/: matrixd.hpp
include/impl/: matrixd_impl.hpp
tests/: matrixd_test.cpp
